--- a/package.json
+++ b/package.json
@@ -24,18 +24,30 @@
   },
   "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^8.0.0",
+    "browserify": "^16.2.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
-    "gulp-jsoncombine": "^1.0.3",
-    "gulp-plumber": "^1.1.0",
+    "gulp-jsoncombine": "^1.0.4",
+    "gulp-plumber": "^1.2.0",
+    "gulp-rename": "^1.2.3",
     "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-typescript": "^4.0.2",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
     "gulp-zip": "^3.2.0",
+    "tsify": "^4.0.0",
+    "typescript": "^2.8.4",
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.0",
     "yargs": "^5.0.0"
   },
   "dependencies": {
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.9.1"
+    "@types/jquery": "^3.3.2",
+    "jquery": "^3.3.1",
+    "vinyl-buffer": "^1.0.1"
   }
 }
