--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
   },
   "dependencies": {
     "@types/jquery": "^3.3.2",
+    "@types/promise-polyfill": "^6.0.0",
     "jquery": "^3.3.1",
+    "promise-polyfill": "^8.0.0",
+    "rxjs": "^6.2.0",
     "vinyl-buffer": "^1.0.1"
   }
 }
