--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-jsoncombine": "^1.0.4",
     "gulp-plumber": "^1.2.0",
@@ -49,6 +50,7 @@
     "@types/debug": "^0.0.30",
     "@types/jquery": "^3.3.2",
     "@types/promise-polyfill": "^6.0.0",
+    "bootstrap": "^4.1.1",
     "debug": "^3.1.0",
     "jquery": "^3.3.1",
     "jshint": "^2.9.5",
