--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
+    "autoprefixer": "^8.6.2",
     "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
@@ -32,6 +34,7 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-jsoncombine": "^1.0.4",
+    "gulp-parcel": "^0.3.5",
     "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.2.3",
     "gulp-sass": "^2.3.2",
@@ -40,10 +43,14 @@
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "gulp-zip": "^3.2.0",
+    "parcel-bundler": "^1.8.1",
     "tsify": "^4.0.0",
     "typescript": "^2.8.4",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3",
+    "webpack-stream": "^4.0.3",
     "yargs": "^5.0.0"
   },
   "dependencies": {
@@ -55,9 +62,11 @@
     "gulp-shell": "^0.6.5",
     "jquery": "^3.3.1",
     "jshint": "^2.9.5",
+    "postcss-modules": "^1.1.0",
     "promise-polyfill": "^8.0.0",
     "rivets": "^0.9.6",
     "rxjs": "^6.2.0",
+    "ts-loader": "^4.4.1",
     "vinyl-buffer": "^1.0.1"
   }
 }
