--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
   ],
   "compileOnSave": false,
   "compilerOptions": {
+    // "strict": true,
+    // "allowJs": true,
     "noImplicitAny": true,
     "outDir": "./theme/assets/",
     "baseUrl": "src",
@@ -12,7 +14,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "target": "es6", // Can I do this and transform it to es5 with babel?
     "module": "commonjs",
     "typeRoots": [
       "node_modules/@types",
