--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "art-code-studio-shopify-theme",
   "version": "0.0.3",
   "description": "Shopify theme based on Bootstrap 4",
-  "main": "gulpfile.js",
+  "main": "src/ts/main.ts",
+  "typings": "src/ts/types",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass_php": "php ./vendor/bin/pscss ./dist/scss/theme.scss",
@@ -24,10 +25,8 @@
   },
   "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
+    "@babel/preset-env": "^7.0.0-beta.49",
     "autoprefixer": "^8.6.2",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
     "gulp": "^3.9.1",
@@ -45,13 +44,18 @@
     "gulp-zip": "^3.2.0",
     "parcel-bundler": "^1.8.1",
     "tsify": "^4.0.0",
-    "typescript": "^2.8.4",
+    "typescript": "^2.9.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
     "webpack-stream": "^4.0.3",
-    "yargs": "^5.0.0"
+    "yargs": "^5.0.0",
+    "gulp-shell": "^0.6.5",
+    "postcss-modules": "^1.1.0",
+    "promise-polyfill": "^8.0.0",
+    "ts-loader": "^4.4.1",
+    "vinyl-buffer": "^1.0.1"
   },
   "dependencies": {
     "@types/debug": "^0.0.30",
@@ -59,14 +63,9 @@
     "@types/promise-polyfill": "^6.0.0",
     "bootstrap": "^4.1.1",
     "debug": "^3.1.0",
-    "gulp-shell": "^0.6.5",
     "jquery": "^3.3.1",
     "jshint": "^2.9.5",
-    "postcss-modules": "^1.1.0",
-    "promise-polyfill": "^8.0.0",
     "rivets": "^0.9.6",
-    "rxjs": "^6.2.0",
-    "ts-loader": "^4.4.1",
-    "vinyl-buffer": "^1.0.1"
+    "rxjs": "^6.2.0"
   }
 }
