--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "typeRoots": [
       "node_modules/@types",
       "types",
-      "./types"
+      "src/ts/types"
     ],
     "lib": [
       "es2016",
