--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,17 @@
 {
   "presets": [
-    ["env", {
-      "targets": {
-        "chrome": 52,
-        "browsers": ["last 2 versions", "ie >= 10", "safari >= 8"]
+    "@babel/typescript",
+    [
+      "@babel/preset-env", {
+        "targets": {
+          "chrome": 52,
+          "browsers": ["last 2 versions", "ie >= 10", "safari >= 8"]
+        }
       }
-    }]
+    ]
+  ],
+  "plugins": [
+    "@babel/proposal-class-properties",
+    "@babel/proposal-object-rest-spread"
   ]
 }
