--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass_php": "php ./vendor/bin/pscss ./dist/scss/theme.scss",
-    "sass_ruby": "sass ./dist/scss/theme.scss"
+    "sass_ruby": "sass ./dist/scss/theme.scss",
+    "build": "tsc --emitDeclarationOnly && babel src/ts/ --out-dir build --extensions \".ts,.tsx\"",
+    "type-check": "tsc --noEmit",
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
@@ -25,37 +28,43 @@
   },
   "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
-    "@babel/preset-env": "^7.0.0-beta.49",
+    "@babel/cli": "^7.0.0-beta.51",
+    "@babel/core": "^7.0.0-beta.51",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.51",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/preset-typescript": "^7.0.0-beta.51",
     "autoprefixer": "^8.6.2",
+    "babel-loader": "^8.0.0-beta.3",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-jsoncombine": "^1.0.4",
     "gulp-parcel": "^0.3.5",
     "gulp-plumber": "^1.2.0",
-    "gulp-rename": "^1.2.3",
-    "gulp-sass": "^2.3.2",
+    "gulp-rename": "^1.3.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-shell": "^0.6.5",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^4.0.2",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "gulp-zip": "^3.2.0",
     "parcel-bundler": "^1.8.1",
-    "tsify": "^4.0.0",
-    "typescript": "^2.9.1",
-    "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.0",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.3",
-    "webpack-stream": "^4.0.3",
-    "yargs": "^5.0.0",
-    "gulp-shell": "^0.6.5",
     "postcss-modules": "^1.1.0",
     "promise-polyfill": "^8.0.0",
     "ts-loader": "^4.4.1",
-    "vinyl-buffer": "^1.0.1"
+    "tsify": "^4.0.0",
+    "typescript": "^2.9.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.0",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.4",
+    "webpack-stream": "^4.0.3",
+    "yargs": "^5.0.0"
   },
   "dependencies": {
     "@types/debug": "^0.0.30",
@@ -66,6 +75,6 @@
     "jquery": "^3.3.1",
     "jshint": "^2.9.5",
     "rivets": "^0.9.6",
-    "rxjs": "^6.2.0"
+    "rxjs": "^6.2.1"
   }
 }
