--- a/package.json
+++ b/package.json
@@ -64,17 +64,19 @@
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.4",
     "webpack-stream": "^4.0.3",
-    "yargs": "^5.0.0"
+    "yargs": "^5.0.0",
+    "jshint": "^2.9.5"
   },
   "dependencies": {
     "@types/debug": "^0.0.30",
     "@types/jquery": "^3.3.2",
     "@types/promise-polyfill": "^6.0.0",
+    "@types/slideout": "^0.1.19",
     "bootstrap": "^4.1.1",
     "debug": "^3.1.0",
     "jquery": "^3.3.1",
-    "jshint": "^2.9.5",
     "rivets": "^0.9.6",
-    "rxjs": "^6.2.1"
+    "rxjs": "^6.2.1",
+    "slideout": "^1.0.1"
   }
 }
