--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "gulp-zip": "^3.2.0",
+    "html-loader": "^0.5.5",
+    "jshint": "^2.9.5",
     "parcel-bundler": "^1.8.1",
     "postcss-modules": "^1.1.0",
     "promise-polyfill": "^8.0.0",
@@ -64,8 +66,7 @@
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.4",
     "webpack-stream": "^4.0.3",
-    "yargs": "^5.0.0",
-    "jshint": "^2.9.5"
+    "yargs": "^5.0.0"
   },
   "dependencies": {
     "@types/debug": "^0.0.30",
