--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "bootstrap": "^4.1.1",
     "debug": "^3.1.0",
     "jquery": "^3.3.1",
-    "rivets": "^0.9.6",
+    "rivets": "github:QAPInt/rivets",
     "rxjs": "^6.2.1",
     "slideout": "^1.0.1"
   }
