--- a/package.json
+++ b/package.json
@@ -71,13 +71,12 @@
   "dependencies": {
     "@types/debug": "^0.0.30",
     "@types/jquery": "^3.3.2",
-    "@types/promise-polyfill": "^6.0.0",
     "@types/slideout": "^0.1.19",
     "bootstrap": "^4.1.1",
     "debug": "^3.1.0",
     "jquery": "^3.3.1",
-    "rivets": "github:QAPInt/rivets",
     "rxjs": "^6.2.1",
-    "slideout": "^1.0.1"
+    "slideout": "^1.0.1",
+    "tinybind": "^0.11.0"
   }
 }
