--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass_php": "php ./vendor/bin/pscss ./dist/scss/theme.scss",
     "sass_ruby": "sass ./dist/scss/theme.scss",
-    "build": "tsc --emitDeclarationOnly && babel src/ts/ --out-dir build --extensions \".ts,.tsx\"",
     "type-check": "tsc --noEmit",
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "build": "npm run type-check && npm run webpack",
+    "watch": "webpack --watch --env.dev"
   },
   "repository": {
     "type": "git",
@@ -31,11 +32,12 @@
     "@babel/cli": "^7.0.0-beta.51",
     "@babel/core": "^7.0.0-beta.51",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.51",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0-beta.51",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
     "@babel/preset-typescript": "^7.0.0-beta.51",
-    "autoprefixer": "^8.6.2",
-    "babel-loader": "^8.0.0-beta.3",
+    "autoprefixer": "^8.6.4",
+    "babel-loader": "^8.0.0-beta.4",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
     "gulp": "^4.0.0",
@@ -54,23 +56,23 @@
     "gulp-zip": "^3.2.0",
     "html-loader": "^0.5.5",
     "jshint": "^2.9.5",
-    "parcel-bundler": "^1.8.1",
+    "parcel-bundler": "^1.9.3",
     "postcss-modules": "^1.1.0",
     "promise-polyfill": "^8.0.0",
-    "ts-loader": "^4.4.1",
+    "ts-loader": "^4.4.2",
     "tsify": "^4.0.0",
-    "typescript": "^2.9.1",
+    "typescript": "^2.9.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.4",
+    "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8",
     "webpack-stream": "^4.0.3",
     "yargs": "^5.0.0"
   },
   "dependencies": {
     "@types/debug": "^0.0.30",
-    "@types/jquery": "^3.3.2",
+    "@types/jquery": "^3.3.4",
     "@types/slideout": "^0.1.19",
     "bootstrap": "^4.1.1",
     "debug": "^3.1.0",
