--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "parcel-bundler": "^1.9.3",
     "postcss-modules": "^1.1.0",
     "promise-polyfill": "^8.0.0",
+    "shelljs": "^0.8.2",
     "ts-loader": "^4.4.2",
     "tsify": "^4.0.0",
     "typescript": "^2.9.2",
