--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass_php": "php ./vendor/bin/pscss ./dist/scss/theme.scss",
     "sass_ruby": "sass ./dist/scss/theme.scss",
-    "type-check": "tsc --noEmit",
+    "type-check": "node ./utils/copy_modules.js && tsc --noEmit",
     "webpack": "webpack --display-modules",
     "build": "npm run type-check && npm run webpack",
     "watch": "webpack --watch --env.dev"
@@ -80,6 +80,6 @@
     "jquery": "^3.3.1",
     "rxjs": "^6.2.1",
     "slideout": "^1.0.1",
-    "tinybind": "^0.11.0"
+    "tinybind": "github:JumpLinkNetwork/tinybind#master"
   }
 }
