--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 logs
 *.log
 npm-debug.log*
-theme/theme.lock
 package-lock.json
 
 # Runtime data
@@ -85,11 +84,12 @@ Thumbs.db
 /node_modules
 /bower_components
 grunt-config.json
-theme/config*.yml
+config*.yml
 /_site
 assets/logo.png
 css/
 composer.phar
 composer.lock
 yarn.lock
+theme.lock
 vendor/
