--- a/.babelrc
+++ b/.babelrc
@@ -12,5 +12,8 @@
   "plugins": [
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-object-rest-spread"
+  ],
+  "ignore": [
+    "**/custom-elements-es5-adapter.js"
   ]
 }
