[Navigation] Start desktop navigation and filter

--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "src/ts/main.ts",
   "typings": "src/ts/types",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "sass_php": "php ./vendor/bin/pscss ./dist/scss/theme.scss",
-    "sass_ruby": "sass ./dist/scss/theme.scss",
+    "test": "npm run ts-test",
     "copy-modules": "node ./utils/copy_modules.js",
-    "type-check": "tslint -c tslint.json 'src/**/*.ts' && tsc --noEmit",
-    "webpack": "webpack",
-    "build": "npm run copy-modules && npm run type-check && npm run webpack && theme upload --dir ./theme assets/bundle.js assets/bundle.css --force",
-    "watch": "npm run copy-modules && npm run type-check && theme watch --dir './theme' --force & webpack --watch --env.dev"
+    "sass": "webpack --config webpack.config.sass.js && theme upload --dir ./theme assets/bundle.css --force",
+    "sass-watch": "webpack --config webpack.config.sass.js --watch --env.dev",
+    "ts": "webpack && theme upload --dir ./theme assets/bundle.js --force",
+    "ts-watch": "webpack --watch",
+    "ts-test": "tslint -c tslint.json 'src/**/*.ts' && tsc --noEmit",
+    "build": "npm run copy-modules && npm run ts-test && npm run ts && npm run sass",
+    "watch": "npm run copy-modules && npm run ts-test && theme watch --dir './theme' --force & npm run ts-watch & npm run sass-watch"
   },
   "repository": {
     "type": "git",
@@ -30,13 +31,12 @@
   },
   "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.52",
-    "@babel/core": "^7.0.0-beta.52",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.52",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0-beta.52",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.52",
-    "@babel/preset-env": "^7.0.0-beta.52",
-    "@babel/preset-typescript": "^7.0.0-beta.52",
+    "@babel/cli": "^7.0.0-beta.54",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/preset-typescript": "^7.0.0-beta.54",
     "autoprefixer": "^8.6.5",
     "babel-loader": "^8.0.0-beta.4",
     "babelify": "^8.0.0",
@@ -53,21 +53,23 @@
     "gulp-zip": "^3.2.0",
     "html-loader": "^0.5.5",
     "jshint": "^2.9.5",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
-    "parcel-bundler": "^1.9.3",
+    "parcel-bundler": "^1.9.7",
     "postcss-cli": "^5.0.1",
     "postcss-loader": "^2.1.5",
     "postcss-modules": "^1.1.0",
     "promise-polyfill": "^8.0.0",
     "sass-loader": "^7.0.3",
     "shelljs": "^0.8.2",
+    "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
     "tsify": "^4.0.0",
     "typescript": "^2.9.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0",
-    "webpack": "^4.14.0",
+    "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8",
     "webpack-stream": "^4.0.3",
     "yargs": "^5.0.0"
@@ -79,7 +81,7 @@
     "bootstrap": "^4.1.1",
     "debug": "^3.1.0",
     "jquery": "^3.3.1",
-    "rxjs": "^6.2.1",
+    "rxjs": "^6.2.2",
     "tinybind": "github:JumpLinkNetwork/tinybind#master"
   }
 }
