--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
     [
       "@babel/preset-env", {
         "targets": {
-          "browsers": ["ie >= 11", "safari >= 10", "chrome >= 52", "edge >= 17"]
+          "browsers": ["ie >= 11", "safari >= 10", "chrome >= 52", "edge >= 16", "firefox >= 59"]
         }
       }
     ]
