[Binders] bs4 collapse binders, bs4 tabs binder [Core] replaced webpack sass build with simpler pure npm script [Styles] Some new styles

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "test": "npm run ts-test",
     "copy-modules": "node ./utils/copy_modules.js",
-    "sass": "webpack --config webpack.config.sass.js && theme upload --dir ./theme assets/bundle.css --force",
-    "sass-watch": "webpack --config webpack.config.sass.js --watch --env.dev",
+    "sass": "node-sass --output-style compressed src/scss/bundle.scss -o theme/assets/ && postcss postcss -c postcss.config.js theme/assets/bundle.css -o theme/assets/bundle.css && theme upload --dir ./theme assets/bundle.css --force",
+    "sass-watch": "nodemon -e scss -x 'npm run sass'",
     "ts": "webpack && theme upload --dir ./theme assets/bundle.js --force",
     "ts-watch": "webpack --watch",
     "ts-test": "tslint -c tslint.json 'src/**/*.ts' && tsc --noEmit",
@@ -56,7 +56,9 @@
     "jshint": "^2.9.5",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
+    "nodemon": "^1.18.3",
     "parcel-bundler": "^1.9.7",
+    "postcss": "^7.0.1",
     "postcss-cli": "^5.0.1",
     "postcss-loader": "^2.1.5",
     "postcss-modules": "^1.3.0",
