--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
   },
   "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.54",
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
-    "@babel/preset-typescript": "^7.0.0-beta.54",
+    "@babel/cli": "^7.0.0-beta.55",
+    "@babel/core": "^7.0.0-beta.55",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.55",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.55",
+    "@babel/preset-env": "^7.0.0-beta.55",
+    "@babel/preset-typescript": "^7.0.0-beta.55",
     "autoprefixer": "^8.6.5",
     "babel-loader": "^8.0.0-beta.4",
     "babelify": "^8.0.0",
@@ -53,31 +53,32 @@
     "gulp-util": "^3.0.8",
     "gulp-zip": "^3.2.0",
     "html-loader": "^0.5.5",
-    "jshint": "^2.9.5",
+    "jshint": "^2.9.6",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.3",
     "parcel-bundler": "^1.9.7",
-    "postcss": "^7.0.1",
+    "postcss": "^7.0.2",
     "postcss-cli": "^5.0.1",
     "postcss-loader": "^2.1.5",
-    "postcss-modules": "^1.3.0",
+    "postcss-modules": "^1.3.2",
     "sass-loader": "^7.0.3",
     "shelljs": "^0.8.2",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
     "tsify": "^4.0.0",
-    "typescript": "^2.9.2",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0",
-    "webpack": "^4.16.2",
+    "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0",
     "webpack-stream": "^4.0.3",
     "yargs": "^5.0.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.54",
+    "@babel/polyfill": "^7.0.0-beta.55",
     "@types/debug": "^0.0.30",
     "@types/jquery": "^3.3.5",
     "@types/promise-polyfill": "^6.0.0",
