--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "tsify": "^4.0.0",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0",
@@ -85,6 +86,7 @@
     "bootstrap": "^4.1.3",
     "debug": "^3.1.0",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "promise-polyfill": "^8.0.0",
     "rxjs": "^6.2.2",
     "tinybind": "github:JumpLinkNetwork/tinybind#master"
