--- a/theme/assets/favicon-manifest.json
+++ b/theme/assets/favicon-manifest.json
@@ -13,7 +13,7 @@
       "type": "image\/png"
     }
   ],
-  "theme_color": "#ffffff",
+  "theme_color": "#D9998F",
   "background_color": "#ffffff",
   "display": "standalone"
 }
