--- a/package.json
+++ b/package.json
@@ -82,10 +82,12 @@
     "@babel/polyfill": "^7.0.0-beta.55",
     "@types/debug": "^0.0.30",
     "@types/jquery": "^3.3.5",
+    "@types/p-queue": "^2.3.1",
     "@types/promise-polyfill": "^6.0.0",
     "bootstrap": "^4.1.3",
     "debug": "^3.1.0",
     "jquery": "^3.3.1",
+    "p-queue": "^2.4.2",
     "popper.js": "^1.14.3",
     "promise-polyfill": "^8.0.0",
     "rxjs": "^6.2.2",
