--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fassbender-shopify-theme",
-  "version": "0.0.1",
+  "version": "0.5.5",
   "description": "Shopify theme based on Bootstrap 4",
   "main": "src/ts/main.ts",
   "typings": "src/ts/types",
@@ -32,12 +32,12 @@
   },
   "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.56",
-    "@babel/core": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.56",
-    "@babel/preset-env": "^7.0.0-beta.56",
-    "@babel/preset-typescript": "^7.0.0-beta.56",
+    "@babel/cli": "^7.0.0-rc.1",
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
+    "@babel/preset-typescript": "^7.0.0-rc.1",
     "autoprefixer": "^8.6.5",
     "babel-loader": "^8.0.0-beta.4",
     "babelify": "^8.0.0",
@@ -55,7 +55,7 @@
     "html-loader": "^0.5.5",
     "jshint": "^2.9.6",
     "mini-css-extract-plugin": "^0.4.1",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.9.3",
     "nodemon": "^1.18.3",
     "parcel-bundler": "^1.9.7",
     "postcss": "^7.0.2",
@@ -69,7 +69,7 @@
     "tsify": "^4.0.0",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1",
-    "uglifyjs-webpack-plugin": "^1.2.7",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0",
@@ -79,7 +79,7 @@
     "yargs": "^5.0.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.56",
+    "@babel/polyfill": "^7.0.0-rc.1",
     "@types/debug": "^0.0.30",
     "@types/jquery": "^3.3.5",
     "@types/p-queue": "^2.3.1",
@@ -89,7 +89,7 @@
     "jquery": "^3.3.1",
     "p-queue": "^2.4.2",
     "popper.js": "^1.14.4",
-    "promise-polyfill": "^8.0.0",
+    "promise-polyfill": "^8.1.0",
     "rxjs": "^6.2.2",
     "tinybind": "github:JumpLinkNetwork/tinybind#master"
   }
