Blow cart dropdown background on supported browsers

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "scripts": {
     "test": "npm run ts-test",
     "copy-modules": "node ./utils/copy_modules.js",
-    "sass": "node-sass --output-style compressed src/scss/bundle.scss -o theme/assets/ && postcss postcss -c postcss.config.js theme/assets/bundle.css -o theme/assets/bundle.css && theme upload --dir ./theme assets/bundle.css --force",
+    "sass": "node-sass --output-style compressed src/scss/bundle.scss -o theme/assets/ && postcss -c postcss.config.js theme/assets/bundle.css -o theme/assets/bundle.css && theme deploy --dir ./theme assets/bundle.css",
     "sass-watch": "nodemon -e scss -x 'npm run sass'",
-    "ts": "webpack && theme upload --dir ./theme assets/bundle.js --force",
+    "ts": "webpack && theme upload --dir ./theme assets/bundle.js",
     "ts-watch": "webpack --watch",
     "ts-test": "tslint -c tslint.json 'src/**/*.ts' && tsc --noEmit",
     "build": "npm run copy-modules && npm run ts-test && npm run ts && npm run sass",
-    "_watch": "theme watch --dir './theme' --force & npm run ts-watch & npm run sass-watch",
+    "_watch": "theme watch --dir './theme' & npm run ts-watch & npm run sass-watch",
     "watch": "npm run copy-modules && npm run ts-test && npm run _watch"
   },
   "repository": {
@@ -32,14 +32,14 @@
   },
   "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-rc.1",
-    "@babel/core": "^7.0.0-rc.1",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.1",
-    "@babel/preset-env": "^7.0.0-rc.1",
-    "@babel/preset-typescript": "^7.0.0-rc.1",
+    "@babel/cli": "^7.0.0-rc.2",
+    "@babel/core": "^7.0.0-rc.2",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.2",
+    "@babel/preset-env": "^7.0.0-rc.2",
+    "@babel/preset-typescript": "^7.0.0-rc.2",
     "autoprefixer": "^8.6.5",
-    "babel-loader": "^8.0.0-beta.4",
+    "babel-loader": "^8.0.0-beta.6",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
     "css-flip": "^0.5.0",
@@ -73,13 +73,13 @@
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0",
-    "webpack": "^4.17.0",
+    "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-stream": "^4.0.3",
     "yargs": "^5.0.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-rc.1",
+    "@babel/polyfill": "^7.0.0-rc.2",
     "@types/debug": "^0.0.30",
     "@types/jquery": "^3.3.6",
     "@types/p-queue": "^2.3.1",
