[ShopifyCart] Add and pending animations

--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
   },
   "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-rc.2",
-    "@babel/core": "^7.0.0-rc.2",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.2",
-    "@babel/preset-env": "^7.0.0-rc.2",
-    "@babel/preset-typescript": "^7.0.0-rc.2",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-typescript": "^7.0.0",
     "autoprefixer": "^8.6.5",
-    "babel-loader": "^8.0.0-beta.6",
+    "babel-loader": "^8.0.0",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
     "css-flip": "^0.5.0",
@@ -79,7 +79,7 @@
     "yargs": "^5.0.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-rc.2",
+    "@babel/polyfill": "^7.0.0",
     "@types/debug": "^0.0.30",
     "@types/jquery": "^3.3.6",
     "@types/p-queue": "^2.3.1",
