--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,28 @@
 {
   "presets": [
-    "@babel/typescript",
+    [
+      "@babel/typescript", {
+        "allExtensions": true
+      }
+    ],
     [
       "@babel/preset-env", {
         "targets": {
-          "browsers": ["ie >= 11", "safari >= 10", "chrome >= 52", "edge >= 16", "firefox >= 59"]
+          "ie": "11",
+          "safari": "10",
+          "chrome": "52",
+          "edge": "16",
+          "firefox": "59"
         }
       }
     ]
   ],
   "plugins": [
+    [
+      "@babel/plugin-transform-runtime", {
+        "corejs": 2
+      }
+    ],
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-object-rest-spread"
   ],
