--- a/.babelrc
+++ b/.babelrc
@@ -24,7 +24,8 @@
       }
     ],
     "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-object-rest-spread"
+    "@babel/plugin-proposal-object-rest-spread",
+    "array-includes"
   ],
   "ignore": [
     "**/custom-elements-es5-adapter.js"
