Normal inputs fpr newsletter and contact form, fixes on i18n binder, fixes on contact form translations

--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "sass": "node-sass --output-style compressed src/scss/bundle.scss -o theme/assets/ && postcss -c postcss.config.js theme/assets/bundle.css -o theme/assets/bundle.css && theme deploy --dir ./theme assets/bundle.css",
     "sass-watch": "nodemon -e scss -x 'npm run sass'",
     "webpack": "webpack",
-    "ts": "webpack && theme upload --dir ./theme assets/bundle.js",
+    "webpack:dev": "webpack --config webpack.config.dev.js",
+    "ts": "npm run webpack && theme upload --dir ./theme assets/bundle.js",
+    "ts:dev": "npm run webpack:dev && theme upload --dir ./theme assets/bundle.js",
     "ts-babel": "babel src/ts/main.ts --extensions '.ts'",
-    "ts-watch": "webpack --watch",
+    "ts-watch": "npm run webpack -- --watch",
+    "ts-watch:dev": "npm run webpack:dev -- --watch",
     "ts-test": "tslint -c tslint.json 'src/**/*.ts' && tsc --noEmit",
     "build": "npm run copy-modules && npm run ts-test && npm run ts && npm run sass",
     "_watch": "theme watch --dir './theme' & npm run ts-watch & npm run sass-watch",
+    "_watch:dev": "theme watch --dir './theme' & npm run ts-watch:dev & npm run sass-watch",
     "watch": "npm run copy-modules && npm run ts-test && npm run _watch",
+    "watch:dev": "npm run copy-modules && npm run ts-test && npm run _watch:dev",
     "download": "theme download --dir './theme'",
     "checkout": "uglifyjs checkout/custom-checkout.js -o checkout/custom-checkout.min.js -c -m; cleancss checkout/custom-checkout.css -o checkout/custom-checkout.min.css "
   },
