--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@ribajs/core": "^0.17.0",
     "@ribajs/router": "^0.17.3",
     "@ribajs/shopify": "^0.17.1",
+    "@ribajs/i18n": "^0.17.0",
     "@types/debug": "^0.0.31",
     "@types/jquery": "^3.3.28",
     "@types/p-queue": "^3.0.0",
