--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "watch": "npm run copy-modules && npm run ts-test && npm run _watch",
     "watch:dev": "npm run copy-modules && npm run ts-test && npm run _watch:dev",
     "download": "theme download --dir './theme'",
-    "checkout": "uglifyjs checkout/custom-checkout.js -o checkout/custom-checkout.min.js -c -m; cleancss checkout/custom-checkout.css -o checkout/custom-checkout.min.css "
+    "checkout": "uglifyjs checkout/custom-checkout.js -o checkout/custom-checkout.min.js -c -m; cleancss checkout/custom-checkout.css -o checkout/custom-checkout.min.css ",
+    "link": "npm link @ribajs/core @ribajs/i18n @ribajs/shopify @ribajs/router"
   },
   "repository": {
     "type": "git",
@@ -94,10 +95,10 @@
   },
   "dependencies": {
     "@babel/runtime-corejs2": "^7.2.0",
-    "@ribajs/core": "^0.17.0",
-    "@ribajs/router": "^0.17.3",
-    "@ribajs/shopify": "^0.17.1",
-    "@ribajs/i18n": "^0.17.0",
+    "@ribajs/core": "^0.18.0",
+    "@ribajs/i18n": "^0.18.1",
+    "@ribajs/router": "^0.18.1",
+    "@ribajs/shopify": "^0.18.1",
     "@types/debug": "^0.0.31",
     "@types/jquery": "^3.3.28",
     "@types/p-queue": "^3.0.0",
