--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "watch": "npm run copy-modules && npm run ts-test && npm run _watch",
     "watch:dev": "npm run copy-modules && npm run ts-test && npm run _watch:dev",
     "download": "theme download --dir './theme'",
-    "checkout": "uglifyjs checkout/custom-checkout.js -o checkout/custom-checkout.min.js -c -m; cleancss checkout/custom-checkout.css -o checkout/custom-checkout.min.css ",
-    "link": "npm link @ribajs/core @ribajs/i18n @ribajs/shopify @ribajs/router"
+    "checkout": "uglifyjs checkout/custom-checkout.js -o checkout/custom-checkout.min.js -c -m; cleancss checkout/custom-checkout.css -o checkout/custom-checkout.min.css",
+    "link": "npm link @ribajs/core @ribajs/i18n @ribajs/shopify @ribajs/router @ribajs/shopify-tda && cd node_modules/@ribajs/core && npm install"
   },
   "repository": {
     "type": "git",
@@ -80,11 +80,11 @@
     "sass-loader": "^7.1.0",
     "shelljs": "^0.8.3",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.2.1",
     "ts-loader": "^5.3.2",
     "tsify": "^4.0.1",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2",
-    "uglifyjs-webpack-plugin": "^2.0.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0",
@@ -95,10 +95,11 @@
   },
   "dependencies": {
     "@babel/runtime-corejs2": "^7.2.0",
-    "@ribajs/core": "^0.18.0",
+    "@ribajs/core": "^0.18.3",
     "@ribajs/i18n": "^0.18.1",
     "@ribajs/router": "^0.18.1",
     "@ribajs/shopify": "^0.18.1",
+    "@ribajs/shopify-tda": "^0.18.0",
     "@types/debug": "^0.0.31",
     "@types/jquery": "^3.3.28",
     "@types/p-queue": "^3.0.0",
