--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "ts-watch:dev": "npm run webpack:dev -- --watch",
     "ts-test": "tslint -c tslint.json 'src/**/*.ts' && tsc --noEmit",
     "build": "npm run copy-modules && npm run ts-test && npm run ts && npm run sass",
+    "build:dev": "npm run copy-modules && npm run ts-test && npm run ts:dev && npm run sass",
+    "theme:watch": "theme watch --dir './theme'",
+    "theme:download": "theme download --dir './theme'",
     "_watch": "theme watch --dir './theme' & npm run ts-watch & npm run sass-watch",
     "_watch:dev": "theme watch --dir './theme' & npm run ts-watch:dev & npm run sass-watch",
     "watch": "npm run copy-modules && npm run ts-test && npm run _watch",
     "watch:dev": "npm run copy-modules && npm run ts-test && npm run _watch:dev",
-    "download": "theme download --dir './theme'",
     "checkout": "uglifyjs checkout/custom-checkout.js -o checkout/custom-checkout.min.js -c -m; cleancss checkout/custom-checkout.css -o checkout/custom-checkout.min.css",
-    "link": "npm link @ribajs/core @ribajs/i18n @ribajs/shopify @ribajs/router @ribajs/shopify-tda && cd node_modules/@ribajs/core && npm install"
+    "link": "npm link @ribajs/core @ribajs/i18n @ribajs/shopify @ribajs/router @ribajs/shopify-tda && cd node_modules/@ribajs/shopify-tda && npm run link && cd ../router && npm run link && cd ../shopify && npm run link && cd ../i18n && npm run link && cd ../core && npm run link"
   },
   "repository": {
     "type": "git",
@@ -51,15 +53,15 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-typescript": "^7.1.0",
-    "autoprefixer": "^9.4.3",
-    "babel-loader": "^8.0.4",
+    "autoprefixer": "^9.4.4",
+    "babel-loader": "^8.0.5",
     "babel-plugin-array-includes": "^2.0.3",
     "babelify": "^10.0.0",
     "browserify": "^16.2.3",
     "clean-css-cli": "^4.2.1",
     "css-flip": "^0.5.0",
     "css-loader": "^2.0.1",
-    "csso-cli": "^2.0.0",
+    "csso-cli": "^2.0.2",
     "extract-loader": "^3.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
@@ -74,29 +76,29 @@
     "nodemon": "^1.18.9",
     "parcel-bundler": "^1.11.0",
     "postcss": "^7.0.7",
-    "postcss-cli": "^6.1.0",
+    "postcss-cli": "^6.1.1",
     "postcss-loader": "^3.0.0",
     "postcss-modules": "^1.4.1",
     "sass-loader": "^7.1.0",
     "shelljs": "^0.8.3",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.1",
-    "ts-loader": "^5.3.2",
+    "ts-loader": "^5.3.3",
     "tsify": "^4.0.1",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0",
-    "webpack": "^4.28.1",
-    "webpack-cli": "^3.1.2",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.0",
     "webpack-stream": "^5.2.1",
     "yargs": "^12.0.5"
   },
   "dependencies": {
     "@babel/runtime-corejs2": "^7.2.0",
     "@ribajs/core": "^0.18.3",
-    "@ribajs/i18n": "^0.18.1",
+    "@ribajs/i18n": "^0.18.2",
     "@ribajs/router": "^0.18.1",
     "@ribajs/shopify": "^0.18.1",
     "@ribajs/shopify-tda": "^0.18.0",
